[package]
name = "wasmonkey"
version = "0.1.13"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Patch a WASM object file to replace a set of exported functions with imported functions from another library"
license = "ISC"
homepage = "https://github.com/jedisct1/wasmonkey"
repository = "https://github.com/jedisct1/wasmonkey"
categories = ["wasm"]
edition = "2018"

[dependencies]
clap = { version = "3.0.1", default-features = false, features = [
    "std",
    "cargo",
    "wrap_help",
] }
failure = "0.1.8"
goblin = "0.4.3"
lazy_static = "1.4.0"
parity-wasm = "0.42.2"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
siphasher = "0.3.7"
xfailure = "0.1.0"
